improve Sermon Listing Page and Fix sermon scrolling on mobile Fixes #2 Fixes #21

--- a/src/components/SermonEditor/sermon-editor.css
+++ b/src/components/SermonEditor/sermon-editor.css
@@ -141,3 +141,7 @@ Preserve the relative scale, though. */
 .document-editor .ck-content ol {
 	margin-left: 1em;
 }
+
+.document-editor__editable.ck-editor__editable {
+	max-width: 100%;
+}
